Allen/k8slearn/istio/labs/01-http-gateway/simple.yaml
# 简单的 HTTP 服务
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
      labels:
        app: simple
    spec:
      containers:
      - name: simple
        imagePullPolicy: Always
        image: cncamp/httpserver:v1.0-metrics
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: simple
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: simple
