Allen/k8slearn/istio/labs/01-http-gateway/istio-specs.yaml
# Gateway - 定义服务网格入口
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: simple
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - simple.cncamp.io
    port:
      name: http-simple
      number: 80
      protocol: HTTP
---
# VirtualService - 定义路由规则
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: simple
spec:
  gateways:
  - simple
  hosts:
  - simple.cncamp.io
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: simple.simple.svc.cluster.local
        port:
          number: 80
